--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
             class="carousel slide"
             data-bs-ride="carousel"
             data-bs-interval="3000"
-            style="min-height: 250px"
           >
             <div class="carousel-indicators">
               <button
@@ -181,7 +180,6 @@
                   src="./images/banner/Banner-01.png"
                   class="d-block w-100"
                   alt="..."
-                  style="min-height: 250px"
                 />
               </div>
               <div class="carousel-item">
@@ -189,7 +187,6 @@
                   src="./images/banner/Banner-02.png"
                   class="d-block w-100"
                   alt="..."
-                  style="min-height: 250px"
                 />
               </div>
               <div class="carousel-item">
@@ -197,7 +194,6 @@
                   src="./images/banner/Banner-03.png"
                   class="d-block w-100"
                   alt="..."
-                  style="min-height: 250px"
                 />
               </div>
             </div>
@@ -355,7 +351,7 @@
         <div class="container">
           <h1 class="dinbold light_yellow text-center">LOCATION EXCELLENCE</h1>
           <div class="d-flex flex-md-row flex-column">
-            <div class="col-md-8 map">
+            <div class="col-md-8 map p-4">
               <img src="./images/location excellence/Location.png" alt="..." />
             </div>
             <div class="col-md-4 mt-2 mt-md-0">
